<resources>
    <string name="app_name">TeachMatch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">My TeachMatch</string>
    <string name="title_activity_login">TeachMatch</string>
    <string name="title_activity_image_circle_crop">ImageCircleCrop</string>
    <string name="title_activity_register_screen_help">RegisterScreenHelp</string>
    <string name="title_activity_register_screen_can_help">registerScreenCanHelp</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="TeachMatch">TeachMatch</string>
    <string name="TeachMatchTM">TeachMatch\u2122</string>
    <string name="Next">Next</string>
    <string name="Register">Register</string>
    <string name="Password">Password</string>
    <string name="Back">Back</string>
    <string name="Email">Email</string>
    <string name="IWantStudent">I want to be a student</string>
    <string name="IWantTeacher">I want to be a teacher</string>
    <string name="title_activity_about_yourself_register">AboutYourselfRegister</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_check_stuff">CheckStuff</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_more_about_teacher">MoreAboutTeacher</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_create_new_lesson">CreateNewLesson</string>

    <string-array name="subjects_array">
        <item>Math</item>
        <item>History</item>
        <item>Computer Science</item>
        <item>Civics</item>
        <item>Literature</item>
        <item>English</item>
        <item>Bible</item>
        <item>Grammar</item>
        <item>Electronics</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Biology</item>
        <item>Cyber</item>
    </string-array>
    <string name="title_activity_create_lesson">CreateLesson</string>

</resources>
