<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterScreen"
    tools:showIn="@layout/activity_register_screen"
    android:padding="0dp"
    android:background="@drawable/notebook_background">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#ffc266"
        android:elevation="8dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            android:id="@+id/button"
            android:layout_gravity="end|center_vertical"
            android:background="#00ffffff"
            android:textColor="#ffffff"
            android:onClick="next"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:id="@+id/button2"
            android:layout_gravity="start|center_vertical"
            android:background="#00ffffff"
            android:textColor="#ffffff"
            android:onClick="back"/>
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:layout_marginTop="70dp"
        android:padding="16dp"
        android:onClick="hideKeyboard">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/profile_placeholder"
            app:civ_border_width="2dp"
            app:civ_border_color="#f9e58f"
            android:onClick="pickImage"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/name"
            android:hint="Name"
            android:inputType="textPersonName"
            android:background="#40ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/email"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#40ffffff"
            android:paddingRight="8dp"
            android:paddingLeft="8dp" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/password"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#40ffffff"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

    </LinearLayout>

</RelativeLayout>
