<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FirstLaunch"
    tools:showIn="@layout/activity_first_launch"
    android:padding="0dp"
    android:background="@drawable/teacher_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60000000"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TeachMatch"
            android:textColor="#f3f3f3"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailLogin"
            android:hint="@string/Email"
            android:textColorHint="#dadada"
            android:singleLine="false"
            android:background="#30ffffff"
            android:padding="8dp"
            android:layout_above="@+id/passwordLogin"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordLogin"
            android:hint="@string/Password"
            android:textColorHint="#dadada"
            android:background="#30ffffff"
            android:layout_marginBottom="162dp"
            android:padding="8dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:id="@+id/button3"
            android:layout_alignTop="@+id/passwordLogin"
            android:layout_marginTop="58dp"
            android:background="#60000000"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/passwordLogin"
            android:onClick="login" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:id="@+id/button4"
            android:background="#60000000"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:onClick="register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="OR"
            android:layout_below="@+id/button3"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:layout_marginTop="14dp" />

    </RelativeLayout>
</RelativeLayout>