<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterTeacher"
    tools:showIn="@layout/activity_register_teacher"
    android:padding="0dp"
    android:background="@drawable/notebook_background">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#ffc266"
        android:elevation="8dp"
        android:id="@+id/frameLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:id="@+id/button"
            android:layout_gravity="end|center_vertical"
            android:background="#00ffffff"
            android:textColor="#ffffff"
            android:onClick="register"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:id="@+id/button2"
            android:layout_gravity="start|center_vertical"
            android:background="#00ffffff"
            android:textColor="#ffffff"
            android:onClick="back" />
    </FrameLayout>

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/IWantTeacher"
        android:id="@+id/teacherCB"
        android:textSize="20sp"
        android:padding="16dp"
        android:checked="true"
        android:onClick="wantToTeach"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/frameLayout"
        android:layout_margin="8dp"
        android:layout_marginTop="0dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:layout_below="@+id/teacherCB"
        android:layout_marginTop="-16dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Math"
                android:id="@+id/checkBox1"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="History"
                android:id="@+id/checkBox2"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Computer Science"
                android:id="@+id/checkBox3"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Citizenship"
                android:id="@+id/checkBox4"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Literature"
                android:id="@+id/checkBox5"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:id="@+id/checkBox6"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bible"
                android:id="@+id/checkBox7"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grammar"
                android:id="@+id/checkBox8"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Electronics"
                android:id="@+id/checkBox9"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="59dp"
            android:layout_weight="1"
            android:layout_margin="0dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chemistry"
                android:id="@+id/checkBox10"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Physics"
                android:id="@+id/checkBox11"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Biology"
                android:id="@+id/checkBox12"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cyber"
                android:id="@+id/checkBox13"
                android:checked="false"
                android:textSize="20sp"
                android:layout_margin="6dp"
                android:onClick="lessonPressed" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
